Bug 1719266 - [devtools] Highlight the right selected cookie. :Honza r=Honza DONTBUILD
Add one more assertion to make sure only one cookies is selected

Differential Revision: https://phabricator.services.mozilla.com/D122002

UltraBlame original commit: 4051d2792ad2ac23f3a10fee96e6ed3789b84ca8

--- a/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
@@ -967,6 +967,42 @@ inline
 }
 /
 *
+Cookies
+*
+/
+.
+network
+-
+monitor
+.
+cookies
+-
+panel
+-
+container
+.
+accordion
+.
+properties
+-
+view
+tr
+.
+treeRow
+.
+treeLabelCell
+{
+padding
+-
+inline
+-
+start
+:
+0
+;
+}
+/
+*
 Summary
 tabpanel
 *
