Bug 1642211 - Ability to sort logins by username. r=jaws,fluent-reviewers
Add the ability to sort logins by username.

Differential Revision: https://phabricator.services.mozilla.com/D120591

UltraBlame original commit: e1652be634349f9bc1e156760985754895965ee4

--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -3458,6 +3458,68 @@ option
 name
 =
 "
+username
+"
+data
+-
+l10n
+-
+id
+=
+"
+login
+-
+list
+-
+username
+-
+option
+"
+value
+=
+"
+username
+"
+>
+<
+option
+name
+=
+"
+username
+-
+reverse
+"
+data
+-
+l10n
+-
+id
+=
+"
+login
+-
+list
+-
+username
+-
+reverse
+-
+option
+"
+value
+=
+"
+username
+-
+reverse
+"
+>
+<
+option
+name
+=
+"
 last
 -
 used
