Bug 1720485: Adjust test_after_paint_pref.html to use a double-rAF instead of a timeout, to give its pref-adjustment a better chance to take effect. r=mattwoodrow
nsPresContext has a flag that caches the value of this pref, and the flag gets
updated in the next refresh driver tick after a pref-change occurs.  Right now
we don't have a strong guarantee that the flag will have been updated by the
time the test assumes that it has, which is why we're seeing intermittent
failures.

This patch adjusts the test so that it waits for a double-rAF before proceeding
from its pref adjustment.  I believe this is the recommended way of forcing &
waiting-out at least one refresh driver tick; and this should let the test
reliably assume the pref-adjustment has taken effect.

Differential Revision: https://phabricator.services.mozilla.com/D122169

UltraBlame original commit: 510d15e845ba13535bf5e2271c1468e1f27b43a6

--- a/layout/base/tests/test_after_paint_pref.html
+++ b/layout/base/tests/test_after_paint_pref.html
@@ -675,12 +675,65 @@ false
 }
 )
 ;
-await
-SpecialPowers
-.
-promiseTimeout
+/
+/
+Wait
+for
+a
+double
+-
+rAF
+to
+ensure
+we
+get
+a
+refresh
+driver
+tick
 (
-0
+which
+for
+/
+/
+this
+pref
+is
+what
+actually
+makes
+the
+pref
+-
+adjustment
+take
+effect
+)
+.
+await
+new
+Promise
+(
+resolve
+=
+>
+requestAnimationFrame
+(
+resolve
+)
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+requestAnimationFrame
+(
+resolve
+)
 )
 ;
 setTimeout
