Bug 1717760 - Stop using `KeyEvent.initKeyEvent` in our tests r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D121028

UltraBlame original commit: 2ee20e58b0f19d0ac7e78a99ea8ff1f03b5784d6

--- a/toolkit/components/satchel/test/test_bug_511615.html
+++ b/toolkit/components/satchel/test/test_bug_511615.html
@@ -742,120 +742,90 @@ alwaysval
 keycode
 ;
 }
-let
+const
 dnEvent
 =
-document
-.
-createEvent
-(
-"
+new
 KeyboardEvent
-"
-)
-;
-let
-prEvent
-=
-document
-.
-createEvent
-(
-"
-KeyboardEvent
-"
-)
-;
-let
-upEvent
-=
-document
-.
-createEvent
-(
-"
-KeyboardEvent
-"
-)
-;
-/
-*
-eslint
--
-disable
-no
--
-multi
--
-spaces
-*
-/
-dnEvent
-.
-initKeyEvent
 (
 "
 keydown
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 alwaysval
+charCode
+:
 0
+}
 )
 ;
+const
 prEvent
-.
-initKeyEvent
+=
+new
+KeyboardEvent
 (
 "
 keypress
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 keycode
+charCode
+:
 charcode
+}
 )
 ;
+const
 upEvent
-.
-initKeyEvent
+=
+new
+KeyboardEvent
 (
 "
 keyup
 "
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 null
-false
-false
-false
-false
+keyCode
+:
 alwaysval
+charCode
+:
 0
+}
 )
 ;
-/
-*
-eslint
--
-enable
-no
--
-multi
--
-spaces
-*
-/
 input
 .
 dispatchEvent
