--- a/layout/xul/test/test_bug381167.xhtml
+++ b/layout/xul/test/test_bug381167.xhtml
@@ -294,29 +294,27 @@ closeit
 var
 evt
 =
-document
-.
-createEvent
-(
-'
+new
 KeyboardEvent
-'
-)
-;
-evt
-.
-initKeyEvent
 (
-'
+"
 keypress
-'
+"
+{
+bubbles
+:
 true
+cancelable
+:
 true
+view
+:
 window
+ctrlKey
+:
 true
-false
-false
-false
+keyCode
+:
 '
 W
 '
@@ -325,7 +323,10 @@ charCodeAt
 (
 0
 )
+charCode
+:
 0
+}
 )
 ;
 window
