--- a/browser/components/aboutlogins/tests/chrome/test_fxaccounts_button.html
+++ b/browser/components/aboutlogins/tests/chrome/test_fxaccounts_button.html
@@ -268,6 +268,27 @@ component
 *
 *
 /
+const
+TEST_AVATAR_URL
+=
+"
+data
+:
+image
+/
+png
+;
+base64
+iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4
+/
+/
+8
+/
+w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg
+=
+=
+"
+;
 let
 gFxAccountsButton
 ;
@@ -441,6 +462,9 @@ true
 loggedIn
 :
 true
+avatarURL
+:
+TEST_AVATAR_URL
 loginSyncingEnabled
 :
 false
@@ -519,7 +543,7 @@ add_task
 (
 async
 function
-test_logged_in_without_login_syncing
+test_logged_in_with_login_syncing
 (
 )
 {
@@ -531,27 +555,6 @@ test
 example
 .
 com
-"
-;
-const
-TEST_AVATAR_URL
-=
-"
-data
-:
-image
-/
-png
-;
-base64
-iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4
-/
-/
-8
-/
-w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg
-=
-=
 "
 ;
 gFxAccountsButton
