Bug 1724880 - Add a layout-debugger menu item that dumps CounterManager data.  r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D122210

UltraBlame original commit: c30515045012ceaeb834b58943a9915b5c7fa36b

--- a/layout/tools/layout-debug/ui/content/layoutdebug.xhtml
+++ b/layout/tools/layout-debug/ui/content/layoutdebug.xhtml
@@ -1593,6 +1593,47 @@ dumpViews
 /
 >
 <
+menuitem
+id
+=
+"
+menu_dumpCounterManager
+"
+label
+=
+"
+&
+ldb
+.
+dumpCounterManager
+.
+label
+;
+"
+accesskey
+=
+"
+&
+ldb
+.
+dumpCounterManager
+.
+accesskey
+;
+"
+oncommand
+=
+"
+gDebugger
+.
+dumpCounterManager
+(
+)
+;
+"
+/
+>
+<
 menuseparator
 /
 >
