Bug 1705338 - Improve the layout of the storage access permission section. r=timhuang
Differential Revision: https://phabricator.services.mozilla.com/D122276

UltraBlame original commit: 6788147f500b156d91d20fd6df68f987116205ef

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -5023,7 +5023,7 @@ header
 {
 margin
 -
-top
+block
 :
 0
 .
@@ -5160,13 +5160,10 @@ offset
 for
 items
 -
-3px
-margin
-+
 16px
 icon
 +
-10px
+8px
 margin
 *
 /
@@ -5178,11 +5175,9 @@ start
 :
 calc
 (
-3px
-+
 16px
 +
-10px
+8px
 )
 ;
 }
