--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -593,6 +593,38 @@ padding
 0
 ;
 }
+:
+root
+[
+uidensity
+=
+compact
+]
+{
+-
+-
+arrowpanel
+-
+menuitem
+-
+margin
+:
+0
+4px
+;
+-
+-
+arrowpanel
+-
+menuitem
+-
+padding
+-
+block
+:
+6px
+;
+}
 #
 PanelUI
 -
