Bug 1723800 - Adds button functionality to screenshot component's markup. r=emalysz
Differential Revision: https://phabricator.services.mozilla.com/D122026

UltraBlame original commit: 7945b73a48ca22562c674bde541fb283e37b4662

--- a/browser/components/screenshots/content/screenshots.html
+++ b/browser/components/screenshots/content/screenshots.html
@@ -459,6 +459,13 @@ image
 >
 <
 img
+id
+=
+"
+placeholder
+-
+image
+"
 src
 =
 "
@@ -470,11 +477,11 @@ browser
 /
 content
 /
-screenshots
-/
-cancel
+static
+-
+robot
 .
-svg
+png
 "
 /
 >
