Bug 1724675 - Ensure Synced Tabs panel CtA button label is visible. r=mhowell
In bug 1698883, a more general rule was removed that made the label for
the Synced Tabs panel CtA button visible: https://hg.mozilla.org/integration/autoland/rev/0ff3ea52f07954501fbcfe9e6abe2a62cfb37d9b#l7.13

Since that rule isn't around anymore, we tell the Synced Tabs button
explicitly to display itself. Thankfully, we no longer need to override
the text-align property with !important, since that was in the original
rule that was removed, and the text-shadow is already being set to none
in another rule for this button.

Differential Revision: https://phabricator.services.mozilla.com/D122371

UltraBlame original commit: 0e3fc642a3b6d9af52b09c994297a922778b052d

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -7055,43 +7055,12 @@ toolbarbutton
 -
 text
 {
-/
-*
-!
-important
-to
-override
-"
-.
-cui
--
-widget
--
-panel
-toolbarbutton
->
-.
-toolbarbutton
--
-text
-"
-above
-.
-*
-/
-text
--
-align
+display
 :
-center
-!
-important
-;
-text
 -
-shadow
-:
-none
+moz
+-
+box
 ;
 }
 #
