Bug 1592682 - Add Section Headers in login list for date and alert sorts. r=jaws,tgiles,fluent-reviewers
Add Section Headers in login list (about:logins) for date and alert sorts.

Differential Revision: https://phabricator.services.mozilla.com/D120788

UltraBlame original commit: 2ad42f232d7ccef7417a2692640d342c5d9bb645

--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -4040,6 +4040,61 @@ id
 "
 login
 -
+list
+-
+section
+-
+template
+"
+>
+<
+section
+class
+=
+"
+login
+-
+list
+-
+section
+"
+>
+<
+span
+class
+=
+"
+login
+-
+list
+-
+header
+"
+dir
+=
+"
+auto
+"
+>
+<
+/
+span
+>
+<
+/
+section
+>
+<
+/
+template
+>
+<
+template
+id
+=
+"
+login
+-
 intro
 -
 template
