--- a/browser/components/aboutlogins/content/components/login-list.css
+++ b/browser/components/aboutlogins/content/components/login-list.css
@@ -612,6 +612,29 @@ grow
 :
 1
 ;
+scroll
+-
+padding
+-
+top
+:
+24px
+;
+/
+*
+there
+is
+the
+section
+header
+that
+is
+sticky
+to
+the
+top
+*
+/
 }
 .
 create
@@ -711,6 +734,94 @@ select
 none
 ;
 }
+.
+login
+-
+list
+-
+header
+{
+display
+:
+block
+;
+position
+:
+sticky
+;
+top
+:
+0
+;
+font
+-
+size
+:
+.
+85em
+;
+font
+-
+weight
+:
+600
+;
+padding
+:
+4px
+16px
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+in
+-
+content
+-
+border
+-
+color
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+)
+;
+}
+:
+not
+(
+[
+hidden
+]
+)
++
+.
+login
+-
+list
+-
+section
 .
 login
 -
