Bug 1724793 - Update casing of the toolbar overflow menu customize button. r=flod,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D122394

UltraBlame original commit: c26228e5a3047a5debb9d401efca6fc7acb4883c

--- a/browser/components/customizableui/content/panelUI.inc.xhtml
+++ b/browser/components/customizableui/content/panelUI.inc.xhtml
@@ -263,23 +263,20 @@ footer
 -
 button
 "
-accesskey
+data
+-
+l10n
+-
+id
 =
 "
-&
-overflowCustomizeToolbar
-.
-accesskey
-;
-"
-label
-=
-"
-&
-overflowCustomizeToolbar
-.
-label
-;
+toolbar
+-
+overflow
+-
+customize
+-
+button
 "
 /
 >
