--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -6663,21 +6663,21 @@ image
 :
 url
 (
-chrome
+"
+resource
 :
 /
 /
-global
-/
-skin
-/
-icons
+gre
+-
+resources
 /
 searchfield
 -
 cancel
 .
 svg
+"
 )
 ;
 background
