Bug 1698195 - Part 1: Change the test domain to mochi.test for test_classifier.html to comply with principal vetting. r=dimi
Differential Revision: https://phabricator.services.mozilla.com/D122517

UltraBlame original commit: 0e09c7fdabd6ba9ff02be722cbf1d6ad53f28714

--- a/toolkit/components/url-classifier/tests/mochitest/classifierFrame.html
+++ b/toolkit/components/url-classifier/tests/mochitest/classifierFrame.html
@@ -319,9 +319,9 @@ http
 /
 malware
 .
-example
+mochi
 .
-com
+test
 /
 tests
 /
@@ -384,9 +384,9 @@ http
 /
 unwanted
 .
-example
+mochi
 .
-com
+test
 /
 tests
 /
@@ -451,7 +451,7 @@ css
 href
 =
 "
-import
+import2
 .
 css
 "
