--- a/toolkit/components/url-classifier/tests/mochitest/test_classifier.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classifier.html
@@ -161,73 +161,6 @@ the
 malware
 database
 .
-/
-/
-Note
-that
-we
-intentionally
-don
-'
-t
-touch
-test
--
-phish
--
-simple
-and
-will
-/
-/
-use
-the
-URL
-registered
-by
-addMozEntries
-(
-)
-.
-Otherwise
-classifierHelper
-.
-resetDatabase
-(
-)
-/
-/
-will
-reset
-this
-table
-and
-waitForInit
-(
-)
-can
-'
-t
-find
-the
-known
-phishing
-/
-/
-URL
-in
-test
--
-phish
--
-simple
-breaking
-the
-tests
-following
-this
-one
-.
 var
 testData
 =
@@ -238,9 +171,9 @@ url
 "
 malware
 .
-example
+mochi
 .
-com
+test
 /
 "
 db
@@ -259,9 +192,9 @@ url
 "
 unwanted
 .
-example
+mochi
 .
-com
+test
 /
 "
 db
@@ -280,9 +213,9 @@ url
 "
 blocked
 .
-example
+mochi
 .
-com
+test
 /
 "
 db
@@ -301,9 +234,9 @@ url
 "
 harmful
 .
-example
+mochi
 .
-com
+test
 /
 "
 db
@@ -312,6 +245,36 @@ db
 test
 -
 harmful
+-
+simple
+"
+}
+{
+url
+:
+"
+phish
+.
+mochi
+.
+test
+/
+firefox
+/
+its
+-
+a
+-
+trap
+.
+html
+"
+db
+:
+"
+test
+-
+phish
 -
 simple
 "
@@ -351,9 +314,9 @@ http
 :
 /
 /
-example
+mochi
 .
-com
+test
 "
 table
 :
@@ -375,9 +338,9 @@ http
 /
 malware
 .
-example
+mochi
 .
-com
+test
 "
 table
 :
@@ -404,9 +367,9 @@ http
 /
 unwanted
 .
-example
+mochi
 .
-com
+test
 "
 table
 :
@@ -431,9 +394,11 @@ http
 :
 /
 /
-itisatrap
+phish
 .
-org
+mochi
+.
+test
 /
 firefox
 /
@@ -448,7 +413,7 @@ html
 table
 :
 "
-moztest
+test
 -
 phish
 -
@@ -470,9 +435,9 @@ http
 /
 harmful
 .
-example
+mochi
 .
-com
+test
 "
 table
 :
@@ -499,9 +464,9 @@ http
 /
 blocked
 .
-example
+mochi
 .
-com
+test
 "
 table
 :
@@ -689,7 +654,7 @@ test
 unwanted
 -
 simple
-moztest
+test
 -
 phish
 -
@@ -907,6 +872,20 @@ blockedTable
 test
 -
 block
+-
+simple
+"
+]
+[
+"
+urlclassifier
+.
+phishTable
+"
+"
+test
+-
+phish
 -
 simple
 "
