Bug 1724878 - Apply fill:currentColor to #urlbar-search-mode-indicator-close. r=dao
This fixes the bug but retains the fix for the unfiled bug I mentioned in [this](https://phabricator.services.mozilla.com/D117029#inline-649451) Phabricator comment. Basically we want fill:var(--toolbar-field-color) when the Urlbar is unfocused and fill:var(--toolbar-field-focus-color) when it's focused.

Differential Revision: https://phabricator.services.mozilla.com/D122480

UltraBlame original commit: 97a6a6951ad60cc62392f585775f5fe898cecc7b

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -2462,111 +2462,6 @@ display
 none
 ;
 }
-/
-*
-Use
-system
-colors
-for
-low
-/
-high
-contrast
-mode
-*
-/
-media
-(
-prefers
--
-contrast
-)
-{
-#
-urlbar
--
-search
--
-mode
--
-indicator
-{
-background
--
-color
-:
-Highlight
-;
-outline
--
-color
-:
-Highlight
-;
-color
-:
-HighlightText
-;
-}
-#
-urlbar
--
-search
--
-mode
--
-indicator
--
-close
-{
-fill
-:
-HighlightText
-;
-fill
--
-opacity
-:
-1
-.
-0
-;
-}
-}
-#
-urlbar
--
-search
--
-mode
--
-indicator
--
-title
-{
-padding
--
-inline
-:
-0
-3px
-;
-opacity
-:
-var
-(
--
--
-identity
--
-box
--
-label
--
-opacity
-)
-;
-}
 #
 urlbar
 -
@@ -2655,7 +2550,7 @@ opacity
 ;
 fill
 :
-inherit
+currentColor
 ;
 border
 -
@@ -2732,6 +2627,107 @@ hsla
 %
 .
 3
+)
+;
+}
+/
+*
+Use
+system
+colors
+for
+low
+/
+high
+contrast
+mode
+*
+/
+media
+(
+prefers
+-
+contrast
+)
+{
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+{
+background
+-
+color
+:
+Highlight
+;
+outline
+-
+color
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+}
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+close
+{
+fill
+-
+opacity
+:
+1
+.
+0
+;
+}
+}
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+title
+{
+padding
+-
+inline
+:
+0
+3px
+;
+opacity
+:
+var
+(
+-
+-
+identity
+-
+box
+-
+label
+-
+opacity
 )
 ;
 }
