Bug 1592682 - Add Section Headers in login list for date and alert sorts. r=jaws,tgiles,fluent-reviewers
Add Section Headers in login list (about:logins) for date and alert sorts.

Differential Revision: https://phabricator.services.mozilla.com/D120788

UltraBlame original commit: 6bb6be51f4fa1ad7f5741e98cc0749c76f4126b3

--- a/browser/components/aboutlogins/tests/chrome/test_login_list.html
+++ b/browser/components/aboutlogins/tests/chrome/test_login_list.html
@@ -3506,6 +3506,81 @@ test_filtered_list
 (
 )
 {
+function
+findItemFromUsername
+(
+list
+username
+)
+{
+for
+(
+let
+item
+of
+list
+)
+{
+if
+(
+(
+item
+.
+_cachedUsername
+|
+|
+(
+item
+.
+_cachedUsername
+=
+item
+.
+querySelector
+(
+'
+.
+username
+'
+)
+.
+textContent
+)
+)
+=
+=
+username
+)
+{
+return
+item
+;
+}
+}
+ok
+(
+false
+The
+{
+username
+}
+wasn
+'
+t
+in
+the
+list
+of
+logins
+.
+)
+return
+list
+[
+0
+]
+;
+}
 gLoginList
 .
 setLogins
@@ -3915,10 +3990,13 @@ guid
 ;
 ok
 (
+findItemFromUsername
+(
 loginListItems
-[
-0
-]
+'
+user1
+'
+)
 .
 hidden
 "
@@ -3932,10 +4010,13 @@ hidden
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-1
-]
+'
+user2
+'
+)
 .
 hidden
 "
@@ -4075,10 +4156,13 @@ guid
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-0
-]
+'
+user1
+'
+)
 .
 hidden
 "
@@ -4092,10 +4176,13 @@ visible
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-1
-]
+'
+user2
+'
+)
 .
 hidden
 "
@@ -4287,10 +4374,13 @@ guid
 ;
 ok
 (
+findItemFromUsername
+(
 loginListItems
-[
-0
-]
+'
+user1
+'
+)
 .
 hidden
 "
@@ -4303,10 +4393,13 @@ hidden
 ;
 ok
 (
+findItemFromUsername
+(
 loginListItems
-[
-1
-]
+'
+user2
+'
+)
 .
 hidden
 "
@@ -4450,10 +4543,13 @@ guid
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-0
-]
+'
+user1
+'
+)
 .
 hidden
 "
@@ -4467,10 +4563,13 @@ visible
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-1
-]
+'
+user2
+'
+)
 .
 hidden
 "
@@ -4628,10 +4727,13 @@ guid
 ;
 ok
 (
+findItemFromUsername
+(
 loginListItems
-[
-0
-]
+'
+user1
+'
+)
 .
 hidden
 "
@@ -4644,10 +4746,13 @@ hidden
 ;
 ok
 (
+findItemFromUsername
+(
 loginListItems
-[
-1
-]
+'
+user2
+'
+)
 .
 hidden
 "
@@ -4661,48 +4766,19 @@ hidden
 ok
 (
 !
+findItemFromUsername
+(
 loginListItems
-[
-2
-]
+'
+http_auth_user
+'
+)
 .
 hidden
 "
 http_auth_user
 should
 be
-visible
-"
-)
-;
-is
-(
-loginListItems
-[
-2
-]
-.
-querySelector
-(
-"
-.
-username
-"
-)
-.
-textContent
-"
-http_auth_user
-"
-"
-Verify
-the
-login
-with
-a
-matching
-httpRealm
-is
 visible
 "
 )
