--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -625,6 +625,41 @@ aboutlogins
 /
 components
 /
+login
+-
+list
+-
+section
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+aboutlogins
+/
+components
+/
 menu
 -
 button
@@ -4028,6 +4063,61 @@ src
 <
 /
 li
+>
+<
+/
+template
+>
+<
+template
+id
+=
+"
+login
+-
+list
+-
+section
+-
+template
+"
+>
+<
+section
+class
+=
+"
+login
+-
+list
+-
+section
+"
+>
+<
+span
+class
+=
+"
+login
+-
+list
+-
+header
+"
+dir
+=
+"
+auto
+"
+>
+<
+/
+span
+>
+<
+/
+section
 >
 <
 /
