--- a/browser/themes/shared/UITour.inc.css
+++ b/browser/themes/shared/UITour.inc.css
@@ -74,6 +74,28 @@ appearance
 :
 none
 ;
+/
+*
+Resets
+the
+native
+styles
+in
+windows
+and
+macOS
+*
+/
+border
+:
+none
+;
+background
+-
+color
+:
+transparent
+;
 -
 moz
 -
