--- a/layout/base/tests/file_bug842853.html
+++ b/layout/base/tests/file_bug842853.html
@@ -101,11 +101,27 @@ script
 >
 window
 .
+addEventListener
+(
+"
+load
+"
+(
+)
+=
+>
+{
+window
+.
 parent
 .
 runTest
 (
 )
+;
+}
+)
+;
 <
 /
 script
