Bug 1692609 - Update tests for a higher-precision RFP r=jgilbert
Depends on D122045

Differential Revision: https://phabricator.services.mozilla.com/D122046

UltraBlame original commit: ce4b4f786c4d5d90da86ebaacd8e445be50d2ee2

--- a/browser/components/resistfingerprinting/test/mochitest/test_animation_api.html
+++ b/browser/components/resistfingerprinting/test/mochitest/test_animation_api.html
@@ -190,21 +190,33 @@ pref
 and
 the
 constant
-100ms
+RFP
+time
+-
+atom
 if
 (
 resistFingerprinting
 )
 {
+const
+RFP_TIME_ATOM_MS
+=
+16
+.
+667
+;
 expectedPrecision
 =
+Math
+.
+max
+(
+1000
+*
+RFP_TIME_ATOM_MS
 expectedPrecision
-<
-100000
-?
-100000
-:
-expectedPrecision
+)
 ;
 }
 window
