--- a/browser/components/resistfingerprinting/test/mochitest/test_reduce_time_precision.html
+++ b/browser/components/resistfingerprinting/test/mochitest/test_reduce_time_precision.html
@@ -330,23 +330,36 @@ currentTime
 ]
 )
 ;
-let
-isRounded
-=
+/
+/
+From
+browser
+/
+components
+/
+resistfingerprinting
+/
+test
+/
+browser
+/
+head
+.
+js
+:
+function
+isTimeValueRounded
 (
 x
 expectedPrecision
 )
-=
->
 {
-let
-rounded
+const
+nearestExpected
 =
-(
 Math
 .
-floor
+round
 (
 x
 /
@@ -354,7 +367,6 @@ expectedPrecision
 )
 *
 expectedPrecision
-)
 ;
 /
 /
@@ -372,18 +384,11 @@ just
 fine
 if
 (
-rounded
-=
-=
-=
-x
-|
-|
 x
 =
 =
 =
-0
+nearestExpected
 )
 return
 true
@@ -481,37 +486,25 @@ above
 in
 JavaScript
 .
-if
-(
+const
+error
+=
 Math
 .
 abs
 (
-rounded
--
 x
-+
-expectedPrecision
+-
+nearestExpected
 )
-<
-.
-0005
-)
-{
-return
-true
 ;
-}
-else
 if
 (
 Math
 .
 abs
 (
-rounded
--
-x
+error
 )
 <
 .
@@ -570,9 +563,15 @@ of
 milliseconds
 if
 (
+Math
+.
+round
+(
 expectedPrecision
-<
-1
+)
+!
+=
+expectedPrecision
 &
 &
 Math
@@ -586,17 +585,44 @@ x
 x
 )
 {
-if
+let
+acceptableIntRounding
+=
+false
+;
+acceptableIntRounding
+|
+=
 (
 Math
 .
-round
+floor
 (
-rounded
+nearestExpected
 )
 =
 =
 x
+)
+;
+acceptableIntRounding
+|
+=
+(
+Math
+.
+ceil
+(
+nearestExpected
+)
+=
+=
+x
+)
+;
+if
+(
+acceptableIntRounding
 )
 {
 return
@@ -631,50 +657,26 @@ Value
 x
 +
 "
-Rounded
+Nearest
+Expected
 Vaue
 :
 "
 +
-rounded
+nearestExpected
 +
 "
-Fuzzy1
+Error
 :
 "
 +
-Math
-.
-abs
-(
-rounded
--
-x
-+
-expectedPrecision
-)
-+
-"
-Fuzzy
-2
-:
-"
-+
-Math
-.
-abs
-(
-rounded
--
-x
-)
+error
 )
 ;
 return
 false
 ;
 }
-;
 /
 /
 =
@@ -959,7 +961,7 @@ i
 ;
 ok
 (
-isRounded
+isTimeValueRounded
 (
 timeStamp
 expectedPrecision
@@ -1244,22 +1246,32 @@ precision
 pref
 and
 the
+RFP
+time
+-
+atom
 constant
-100ms
 if
 (
 resistFingerprinting
 )
 {
+const
+RFP_TIME_ATOM_MS
+=
+16
+.
+667
+;
 expectedPrecision
 =
+Math
+.
+max
+(
+RFP_TIME_ATOM_MS
 expectedPrecision
-<
-100
-?
-100
-:
-expectedPrecision
+)
 ;
 }
 let
@@ -1717,21 +1729,31 @@ pref
 and
 the
 constant
-100ms
+RFP
+time
+-
+atom
 if
 (
 resistFingerprinting
 )
 {
+const
+RFP_TIME_ATOM_MS
+=
+16
+.
+667
+;
 expectedPrecision
 =
+Math
+.
+max
+(
+RFP_TIME_ATOM_MS
 expectedPrecision
-<
-100
-?
-100
-:
-expectedPrecision
+)
 ;
 }
 /
@@ -1883,7 +1905,7 @@ continue
 ;
 ok
 (
-isRounded
+isTimeValueRounded
 (
 timeStamp
 expectedPrecision
