Backed out 2 changesets (bug 1692609) for causing failures at test_getUserMedia_addTrackRemoveTrack. CLOSED TREE
Backed out changeset ce4b4f786c4d (bug 1692609)
Backed out changeset d36f5f4ece1e (bug 1692609)

UltraBlame original commit: 36974366b0fbc17ac7e2ee7e6a39ce6cead207fa

--- a/browser/components/resistfingerprinting/test/mochitest/test_animation_api.html
+++ b/browser/components/resistfingerprinting/test/mochitest/test_animation_api.html
@@ -190,33 +190,21 @@ pref
 and
 the
 constant
-RFP
-time
--
-atom
+100ms
 if
 (
 resistFingerprinting
 )
 {
-const
-RFP_TIME_ATOM_MS
-=
-16
-.
-667
-;
 expectedPrecision
 =
-Math
-.
-max
-(
-1000
-*
-RFP_TIME_ATOM_MS
 expectedPrecision
-)
+<
+100000
+?
+100000
+:
+expectedPrecision
 ;
 }
 window
