--- a/browser/components/resistfingerprinting/test/mochitest/test_reduce_time_precision.html
+++ b/browser/components/resistfingerprinting/test/mochitest/test_reduce_time_precision.html
@@ -330,36 +330,23 @@ currentTime
 ]
 )
 ;
-/
-/
-From
-browser
-/
-components
-/
-resistfingerprinting
-/
-test
-/
-browser
-/
-head
-.
-js
-:
-function
-isTimeValueRounded
+let
+isRounded
+=
 (
 x
 expectedPrecision
 )
-{
-const
-nearestExpected
 =
+>
+{
+let
+rounded
+=
+(
 Math
 .
-round
+floor
 (
 x
 /
@@ -367,6 +354,7 @@ expectedPrecision
 )
 *
 expectedPrecision
+)
 ;
 /
 /
@@ -384,11 +372,18 @@ just
 fine
 if
 (
+rounded
+=
+=
+=
+x
+|
+|
 x
 =
 =
 =
-nearestExpected
+0
 )
 return
 true
@@ -486,25 +481,37 @@ above
 in
 JavaScript
 .
-const
-error
-=
-Math
-.
-abs
-(
-x
--
-nearestExpected
-)
-;
 if
 (
 Math
 .
 abs
 (
-error
+rounded
+-
+x
++
+expectedPrecision
+)
+<
+.
+0005
+)
+{
+return
+true
+;
+}
+else
+if
+(
+Math
+.
+abs
+(
+rounded
+-
+x
 )
 <
 .
@@ -563,15 +570,9 @@ of
 milliseconds
 if
 (
-Math
-.
-round
-(
 expectedPrecision
-)
-!
-=
-expectedPrecision
+<
+1
 &
 &
 Math
@@ -585,44 +586,17 @@ x
 x
 )
 {
-let
-acceptableIntRounding
-=
-false
-;
-acceptableIntRounding
-|
-=
-(
-Math
-.
-floor
-(
-nearestExpected
-)
-=
-=
-x
-)
-;
-acceptableIntRounding
-|
-=
-(
-Math
-.
-ceil
-(
-nearestExpected
-)
-=
-=
-x
-)
-;
 if
 (
-acceptableIntRounding
+Math
+.
+round
+(
+rounded
+)
+=
+=
+x
 )
 {
 return
@@ -657,26 +631,50 @@ Value
 x
 +
 "
-Nearest
-Expected
+Rounded
 Vaue
 :
 "
 +
-nearestExpected
+rounded
 +
 "
-Error
+Fuzzy1
 :
 "
 +
-error
+Math
+.
+abs
+(
+rounded
+-
+x
++
+expectedPrecision
+)
++
+"
+Fuzzy
+2
+:
+"
++
+Math
+.
+abs
+(
+rounded
+-
+x
+)
 )
 ;
 return
 false
 ;
 }
+;
 /
 /
 =
@@ -961,7 +959,7 @@ i
 ;
 ok
 (
-isTimeValueRounded
+isRounded
 (
 timeStamp
 expectedPrecision
@@ -1246,32 +1244,22 @@ precision
 pref
 and
 the
-RFP
-time
--
-atom
 constant
+100ms
 if
 (
 resistFingerprinting
 )
 {
-const
-RFP_TIME_ATOM_MS
-=
-16
-.
-667
-;
 expectedPrecision
 =
-Math
-.
-max
-(
-RFP_TIME_ATOM_MS
 expectedPrecision
-)
+<
+100
+?
+100
+:
+expectedPrecision
 ;
 }
 let
@@ -1729,31 +1717,21 @@ pref
 and
 the
 constant
-RFP
-time
--
-atom
+100ms
 if
 (
 resistFingerprinting
 )
 {
-const
-RFP_TIME_ATOM_MS
-=
-16
-.
-667
-;
 expectedPrecision
 =
-Math
-.
-max
-(
-RFP_TIME_ATOM_MS
 expectedPrecision
-)
+<
+100
+?
+100
+:
+expectedPrecision
 ;
 }
 /
@@ -1905,7 +1883,7 @@ continue
 ;
 ok
 (
-isTimeValueRounded
+isRounded
 (
 timeStamp
 expectedPrecision
