Bug 1724019 - Update about:privatebrowsing CSS, markup and tests r=andreio
Differential Revision: https://phabricator.services.mozilla.com/D121753

UltraBlame original commit: 13fa4cea337f54fecc7b06fd6fdb56cdc853e4c3

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
@@ -917,50 +917,8 @@ class
 "
 promo
 -
-image
--
-large
-"
->
-<
-img
-src
-=
-"
-"
-alt
-=
-"
-"
-/
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-promo
--
 content
 "
->
-<
-h1
-id
-=
-"
-promo
--
-header
-"
->
-<
-/
-h1
 >
 <
 p
@@ -1035,6 +993,7 @@ class
 vpn
 -
 promo
+button
 "
 data
 -
@@ -1059,34 +1018,6 @@ vpn
 <
 /
 a
->
-<
-div
-class
-=
-"
-promo
--
-image
--
-small
-"
->
-<
-img
-src
-=
-"
-"
-alt
-=
-"
-"
-/
->
-<
-/
-div
 >
 <
 /
