--- a/browser/themes/shared/privatebrowsing/aboutPrivateBrowsing.css
+++ b/browser/themes/shared/privatebrowsing/aboutPrivateBrowsing.css
@@ -559,40 +559,6 @@ width
 }
 .
 promo
--
-image
--
-large
-{
-margin
--
-inline
--
-end
-:
-6px
-;
-min
--
-width
-:
-160px
-;
-}
-.
-promo
--
-image
--
-small
-{
-display
-:
-none
-;
-}
-.
-promo
 .
 top
 {
@@ -643,30 +609,6 @@ rgba
 promo
 .
 top
-.
-promo
--
-image
--
-large
-{
-min
--
-width
-:
-100px
-;
-margin
--
-inline
-:
-6px
-;
-}
-.
-promo
-.
-top
 ~
 .
 container
@@ -703,36 +645,16 @@ width
 }
 .
 promo
--
-image
--
-large
-{
-margin
--
-inline
--
-end
-:
-36px
-;
-min
--
-width
-:
-200px
-;
-}
 .
+vpn
+-
 promo
--
-image
--
-small
 {
-display
+font
+-
+weight
 :
-block
+700
 ;
 }
 .
@@ -745,24 +667,6 @@ padding
 10px
 22
 %
-;
-}
-.
-promo
-.
-top
-.
-promo
--
-image
--
-large
-{
-min
--
-width
-:
-120px
 ;
 }
 .
@@ -1559,20 +1463,6 @@ top
 ;
 background
 -
-color
-:
-rgba
-(
-0
-0
-0
-0
-.
-2
-)
-;
-background
--
 image
 :
 url
@@ -1899,19 +1789,21 @@ width
 100
 %
 ;
-}
-.
-promo
--
-image
--
-large
-img
-{
-width
+display
 :
-100
-%
+flex
+;
+flex
+-
+direction
+:
+column
+;
+align
+-
+items
+:
+center
 ;
 }
 .
@@ -1941,7 +1833,20 @@ center
 .
 promo
 -
-cta
+content
+p
+{
+max
+-
+width
+:
+236px
+;
+}
+.
+vpn
+-
+promo
 .
 button
 {
@@ -2017,17 +1922,86 @@ weight
 ;
 }
 .
-promo
-.
-bottom
-.
-promo
+vpn
 -
-cta
-{
-display
+promo
+.
+button
 :
-unset
+hover
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+primary
+-
+button
+-
+background
+-
+hover
+)
+;
+}
+.
+vpn
+-
+promo
+.
+button
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+button
+-
+background
+-
+active
+)
+;
+}
+.
+vpn
+-
+promo
+.
+button
+a
+{
+text
+-
+decoration
+:
+none
+;
+font
+-
+weight
+:
+normal
 ;
 }
 .
@@ -2122,41 +2096,6 @@ margin
 top
 :
 30px
-;
-}
-.
-promo
-.
-bottom
-.
-promo
--
-image
--
-small
-{
-margin
--
-top
-:
-40px
-;
-}
-.
-promo
-.
-bottom
-.
-promo
--
-image
--
-small
-img
-{
-height
-:
-40px
 ;
 }
 .
