--- a/browser/components/aboutlogins/tests/chrome/test_login_list.html
+++ b/browser/components/aboutlogins/tests/chrome/test_login_list.html
@@ -6395,6 +6395,51 @@ guid1
 .
 login
 .
+username
+=
+"
+a
+"
+;
+gLoginList
+.
+_logins
+[
+guid2
+]
+.
+login
+.
+username
+=
+"
+b
+"
+;
+gLoginList
+.
+_logins
+[
+guid3
+]
+.
+login
+.
+username
+=
+"
+c
+"
+;
+gLoginList
+.
+_logins
+[
+guid1
+]
+.
+login
+.
 timePasswordChanged
 =
 1
@@ -7294,6 +7339,363 @@ displayed
 below
 breached
 "
+)
+;
+/
+/
+sort
+by
+username
+loginSort
+.
+value
+=
+"
+username
+"
+;
+dispatchChangeEvent
+(
+loginSort
+)
+;
+loginListItems
+=
+gLoginList
+.
+shadowRoot
+.
+querySelectorAll
+(
+"
+.
+login
+-
+list
+-
+item
+:
+not
+(
+#
+new
+-
+login
+-
+list
+-
+item
+[
+hidden
+]
+)
+"
+)
+;
+let
+username1
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+0
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+let
+username2
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+1
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+let
+username3
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+2
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+is
+(
+username1
+.
+localeCompare
+(
+username2
+)
+-
+1
+"
+Logins
+sorted
+by
+username
+.
+First
+:
+"
++
+username1
++
+"
+;
+Second
+:
+"
++
+username2
+)
+;
+is
+(
+username2
+.
+localeCompare
+(
+username3
+)
+-
+1
+"
+Logins
+sorted
+by
+username
+.
+Second
+:
+"
++
+username2
++
+"
+;
+Third
+:
+"
++
+username3
+)
+;
+/
+/
+sort
+by
+username
+in
+reverse
+alphabetical
+order
+loginSort
+.
+value
+=
+"
+username
+-
+reverse
+"
+;
+dispatchChangeEvent
+(
+loginSort
+)
+;
+loginListItems
+=
+gLoginList
+.
+shadowRoot
+.
+querySelectorAll
+(
+"
+.
+login
+-
+list
+-
+item
+:
+not
+(
+#
+new
+-
+login
+-
+list
+-
+item
+[
+hidden
+]
+)
+"
+)
+;
+username1
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+0
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+username2
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+1
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+username3
+=
+gLoginList
+.
+_logins
+[
+loginListItems
+[
+2
+]
+.
+dataset
+.
+guid
+]
+.
+login
+.
+username
+;
+testDescription
+=
+"
+Logins
+sorted
+by
+username
+in
+reverse
+alphabetical
+order
+.
+"
+;
+is
+(
+username3
+.
+localeCompare
+(
+username2
+)
+-
+1
+{
+testDescription
+}
+First
+:
+{
+username3
+}
+Second
+:
+{
+username2
+}
+)
+;
+is
+(
+username2
+.
+localeCompare
+(
+username1
+)
+-
+1
+{
+testDescription
+}
+Second
+:
+{
+username2
+}
+Third
+:
+{
+username1
+}
 )
 ;
 /
