Bug 1724970 - CTA Only variant r=thecount
Differential Revision: https://phabricator.services.mozilla.com/D122497

UltraBlame original commit: a77c480182a49ff8b4639743e590a258c56a5a2f

--- a/toolkit/components/reader/content/aboutReader.html
+++ b/toolkit/components/reader/content/aboutReader.html
@@ -195,6 +195,37 @@ css
 /
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+aboutReaderPocket
+.
+css
+"
+type
+=
+"
+text
+/
+css
+"
+/
+>
+<
 /
 head
 >
@@ -772,6 +803,10 @@ toolbar
 div
 >
 <
+/
+div
+>
+<
 div
 id
 =
@@ -783,6 +818,180 @@ cta
 container
 "
 hidden
+>
+<
+div
+class
+=
+"
+pocket
+-
+cta
+-
+inner
+"
+id
+=
+"
+pocket
+-
+cta
+-
+only
+"
+>
+<
+div
+class
+=
+"
+pocket
+-
+cta
+"
+>
+<
+header
+class
+=
+"
+pocket
+-
+cta
+-
+header
+"
+>
+Save
+anything
+from
+across
+the
+web
+in
+Pocket
+your
+personal
+library
+.
+<
+/
+header
+>
+<
+p
+class
+=
+"
+pocket
+-
+cta
+-
+subhead
+"
+>
+As
+part
+of
+the
+Firefox
+family
+Pocket
+provides
+a
+quiet
+calm
+space
+that
+s
+perfect
+for
+reading
+.
+It
+strips
+away
+all
+the
+distractions
+of
+the
+internet
+so
+you
+can
+really
+focus
+.
+<
+/
+p
+>
+<
+a
+href
+=
+"
+https
+:
+/
+/
+getpocket
+.
+com
+/
+signup
+"
+class
+=
+"
+pocket
+-
+button
+pocket
+-
+sign
+-
+up
+"
+>
+<
+strong
+>
+Sign
+Up
+<
+/
+strong
+>
+-
+it
+'
+s
+free
+<
+/
+a
+>
+<
+/
+div
+>
+<
+button
+class
+=
+"
+pocket
+-
+dismiss
+-
+cta
+"
+>
+<
+/
+button
 >
 <
 /
