Bug 1725950 - use panel disabled color for disabled bookmark '(empty)' items, r=emalysz
Differential Revision: https://phabricator.services.mozilla.com/D122872

UltraBlame original commit: 4e2ba0c4c187497d3275461f9f94eeaa3f26cb45

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -10165,6 +10165,37 @@ color
 ;
 }
 #
+PlacesToolbar
+menuitem
+[
+disabled
+=
+true
+]
+#
+PlacesToolbar
+menu
+[
+disabled
+=
+true
+]
+{
+color
+:
+var
+(
+-
+-
+panel
+-
+disabled
+-
+color
+)
+;
+}
+#
 BMB_bookmarksPopup
 .
 subviewbutton
