Bug 1725966 - Use a single shared toolkit netError.css instead of duplicating mobile/windows/linux/macos styling. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D122866

UltraBlame original commit: 469dd185eba3bf851c295c94950d39c75890965c

--- a/toolkit/themes/shared/netError.css
+++ b/toolkit/themes/shared/netError.css
@@ -100,15 +100,22 @@ edu
 Updated
 by
 :
-Michael
-Ventnor
+Steven
+Garrity
 <
-m
-.
-ventnor
-gmail
+steven
+silverorange
 .
 com
+>
+*
+Henrik
+Skupin
+<
+mozilla
+hskupin
+.
+info
 >
 *
 /
@@ -152,7 +159,6 @@ margin
 0
 .
 6em
-0
 ;
 border
 -
@@ -256,34 +262,6 @@ padding
 :
 3em
 ;
-padding
--
-inline
--
-start
-:
-30px
-;
-background
--
-color
-:
-Field
-;
-}
-#
-errorLongContent
-#
-errorTitle
-{
-margin
--
-inline
--
-start
-:
-80px
-;
 }
 #
 errorShortDesc
@@ -351,14 +329,6 @@ margin
 top
 :
 2em
-;
-margin
--
-inline
--
-start
-:
-80px
 ;
 }
 #
