Bug 1724718 - fake global.css for android reftests and crashtests, r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D122663

UltraBlame original commit: c1f695ba33711181631cd680ed5f4c64f5b0945c

--- a/layout/style/test/test_bug405818.html
+++ b/layout/style/test/test_bug405818.html
@@ -148,7 +148,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
@@ -258,7 +258,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
@@ -486,7 +486,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
@@ -521,7 +521,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
@@ -665,7 +665,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
@@ -700,7 +700,7 @@ global
 /
 skin
 /
-global
+tooltip
 .
 css
 "
