Bug 1725873 - Reduce menu panel padding in compact mode. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D122671

UltraBlame original commit: 108a81c39b3d8350731cb52fda66b8bdc2f161ca

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -496,6 +496,18 @@ arrowpanel
 menuitem
 -
 padding
+-
+inline
+:
+8px
+;
+-
+-
+arrowpanel
+-
+menuitem
+-
+padding
 :
 var
 (
@@ -508,6 +520,18 @@ menuitem
 padding
 -
 block
+)
+var
+(
+-
+-
+arrowpanel
+-
+menuitem
+-
+padding
+-
+inline
 )
 ;
 -
@@ -622,7 +646,7 @@ padding
 -
 block
 :
-6px
+0
 ;
 }
 #
