Bug 1708866 - Adjust padding and minimum size in Download Panel r=desktop-theme-reviewers,dao
Changed the margin and padding to match the figma mock up.

Differential Revision: https://phabricator.services.mozilla.com/D123009

UltraBlame original commit: 38aa7d0b471fcd59f644e214cc9da5caed16d6c5

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -10358,9 +10358,8 @@ toolbarseparator
 editBookmarkPanel
 toolbarseparator
 #
-downloadsPanel
--
-mainView
+downloadsFooterButtons
+>
 toolbarseparator
 .
 cui
