--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -154,12 +154,6 @@ none
 margin
 :
 0
-.
-31em
-0
-0
-.
-93em
 ;
 }
 #
@@ -198,6 +192,7 @@ height
 ;
 padding
 :
+8px
 0
 .
 31em
@@ -205,9 +200,8 @@ padding
 margin
 :
 0
-.
-31em
 0
+8px
 ;
 border
 -
@@ -1050,11 +1044,11 @@ last
 -
 child
 {
-border
+margin
 -
 bottom
 :
-none
+0
 ;
 }
 .
@@ -1940,6 +1934,27 @@ details
 -
 opacity
 )
+;
+}
+/
+*
+*
+*
+Toolbarseparator
+*
+*
+*
+/
+#
+downloadsFooterButtons
+>
+toolbarseparator
+{
+margin
+-
+inline
+:
+0
 ;
 }
 /
