Backed out changeset 38aa7d0b471f (bug 1708866) for causing mochitest failures in browser_downloads_panel_height. CLOSED TREE
UltraBlame original commit: 41af88f6fae5aa8df07dfd93e1058e661c0b6784

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -10358,8 +10358,9 @@ toolbarseparator
 editBookmarkPanel
 toolbarseparator
 #
-downloadsFooterButtons
->
+downloadsPanel
+-
+mainView
 toolbarseparator
 .
 cui
