--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -154,6 +154,12 @@ none
 margin
 :
 0
+.
+31em
+0
+0
+.
+93em
 ;
 }
 #
@@ -192,7 +198,6 @@ height
 ;
 padding
 :
-8px
 0
 .
 31em
@@ -200,8 +205,9 @@ padding
 margin
 :
 0
+.
+31em
 0
-8px
 ;
 border
 -
@@ -1044,11 +1050,11 @@ last
 -
 child
 {
-margin
+border
 -
 bottom
 :
-0
+none
 ;
 }
 .
@@ -1934,27 +1940,6 @@ details
 -
 opacity
 )
-;
-}
-/
-*
-*
-*
-Toolbarseparator
-*
-*
-*
-/
-#
-downloadsFooterButtons
->
-toolbarseparator
-{
-margin
--
-inline
-:
-0
 ;
 }
 /
