Bug 1725980 - Update strings for about:privatebrowsing r=andreio,flod
Differential Revision: https://phabricator.services.mozilla.com/D123014

UltraBlame original commit: defb6e39eb0b4b183d1394c1603da68581960d05

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
@@ -855,6 +855,8 @@ browsing
 info
 -
 description
+-
+simplified
 "
 >
 <
@@ -885,9 +887,11 @@ private
 -
 browsing
 -
-info
+learn
 -
-myths
+more
+-
+link
 "
 >
 <
@@ -953,11 +957,9 @@ private
 -
 browsing
 -
-need
+hide
 -
-more
--
-privacy
+activity
 "
 >
 <
@@ -1008,11 +1010,9 @@ private
 -
 browsing
 -
-turn
+prominent
 -
-on
--
-vpn
+cta
 "
 >
 <
