Backed out changeset defb6e39eb0b (bug 1725980) for bc failures on browser_privatebrowsing_about_nimbus.js. CLOSED TREE
UltraBlame original commit: c0f5b7db9f88b6ab917d82a9b8c10979e407901f

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
@@ -855,8 +855,6 @@ browsing
 info
 -
 description
--
-simplified
 "
 >
 <
@@ -887,11 +885,9 @@ private
 -
 browsing
 -
-learn
+info
 -
-more
--
-link
+myths
 "
 >
 <
@@ -957,9 +953,11 @@ private
 -
 browsing
 -
-hide
+need
 -
-activity
+more
+-
+privacy
 "
 >
 <
@@ -1010,9 +1008,11 @@ private
 -
 browsing
 -
-prominent
+turn
 -
-cta
+on
+-
+vpn
 "
 >
 <
