Bug 1709511 - Add a preview Fluent file for Firefox Suggest. r=harry,fluent-reviewers,preferences-reviewers,flod
This adds preview localizations for remaining Firefox Suggest strings.

I removed support for `payload.helpTitle` and `sponsoredText`. The `helpTitle`
code comment says it's useful for experiments with hardcoded strings, but we're
not shipping experiments as extensions anymore, and in-tree experimental/
in-development features should use preview localizations AFAICT.

Covered by existing tests:

* browser/components/urlbar/tests/browser/browser_helpUrl.js
* browser/components/urlbar/tests/browser/browser_quickSuggest*
* browser/components/preferences/tests/browser_searchQuickSuggest.js

Depends on D122550

Differential Revision: https://phabricator.services.mozilla.com/D123032

UltraBlame original commit: 7b4db2f1bf8f241eb9b4be4554d151331516a5ac

--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -955,6 +955,24 @@ link
 rel
 =
 "
+localization
+"
+href
+=
+"
+preview
+/
+firefoxSuggest
+.
+ftl
+"
+/
+>
+<
+link
+rel
+=
+"
 shortcut
 icon
 "
