--- a/browser/components/preferences/search.inc.xhtml
+++ b/browser/components/preferences/search.inc.xhtml
@@ -772,8 +772,8 @@ showSearchSuggestionsFirst
 !
 -
 -
-This
-box
+#
+showQuickSuggestContainer
 is
 visible
 only
@@ -781,13 +781,9 @@ for
 users
 enrolled
 in
-the
-en
--
-US
-Quick
+Firefox
 Suggest
-experiment
+experiments
 .
 -
 -
@@ -835,22 +831,24 @@ learn
 -
 more
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-Show
-Firefox
-Suggest
-in
-the
-address
-bar
-(
-suggested
-and
-sponsored
+firefox
+-
+suggest
+-
+preferences
+-
+enable
+-
+urlbar
+-
 results
-)
 "
 preference
 =
@@ -884,14 +882,28 @@ text
 -
 link
 "
-value
+data
+-
+l10n
+-
+id
 =
 "
-Learn
+firefox
+-
+suggest
+-
+preferences
+-
+enable
+-
+urlbar
+-
+results
+-
+learn
+-
 more
-about
-Firefox
-Suggest
 "
 /
 >
