Bug 1724194: ensure close button is visible in findbar r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D123392

UltraBlame original commit: 01b63399f2759e86ac941b498e6dc8d4fa532caf

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -2442,6 +2442,17 @@ bar
 browserContainer
 >
 findbar
+>
+#
+findbar
+-
+close
+-
+container
+.
+browserContainer
+>
+findbar
 {
 background
 -
@@ -2482,6 +2493,33 @@ shadow
 none
 ;
 }
+:
+root
+:
+not
+(
+[
+lwtheme
+-
+image
+]
+)
+.
+browserContainer
+>
+findbar
+:
+-
+moz
+-
+lwtheme
+>
+#
+findbar
+-
+close
+-
+container
 :
 root
 :
@@ -2575,6 +2613,40 @@ color
 )
 ;
 }
+:
+root
+:
+not
+(
+[
+lwtheme
+-
+image
+]
+)
+.
+browserContainer
+>
+findbar
+:
+-
+moz
+-
+lwtheme
+:
+-
+moz
+-
+window
+-
+inactive
+>
+#
+findbar
+-
+close
+-
+container
 :
 root
 :
