--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -253,6 +253,17 @@ height
 :
 28px
 ;
+min
+-
+width
+:
+calc
+(
+100vw
+-
+48px
+)
+;
 }
 /
 *
@@ -1543,6 +1554,18 @@ Close
 button
 *
 /
+#
+findbar
+-
+close
+-
+container
+{
+position
+:
+relative
+;
+}
 /
 *
 Increase
