Bug 1705684 - Correct download details panel spacing. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D123401

UltraBlame original commit: b8575a6aead63e271186f5019fdb8f601215d73c

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -1881,6 +1881,14 @@ factor
 )
 )
 ;
+margin
+-
+bottom
+:
+1
+.
+5em
+;
 }
 #
 downloadsPanel
@@ -1924,7 +1932,7 @@ margin
 -
 bottom
 :
-16px
+1em
 ;
 opacity
 :
