Bug 1723742 - make privacy pref pane highlights more high-contrast friendly, r=morgan,preferences-reviewers,desktop-theme-reviewers,dao,jaws
Differential Revision: https://phabricator.services.mozilla.com/D123161

UltraBlame original commit: b7d27172ebfa09998106e1d839eaaa0facfb4351

--- a/browser/themes/shared/preferences/privacy.css
+++ b/browser/themes/shared/preferences/privacy.css
@@ -743,20 +743,6 @@ border
 color
 )
 ;
-background
--
-color
-:
-rgba
-(
-215
-215
-219
-0
-.
-1
-)
-;
 }
 .
 content
@@ -1431,6 +1417,81 @@ accent
 color
 )
 ;
+}
+media
+(
+prefers
+-
+contrast
+)
+{
+.
+content
+-
+blocking
+-
+category
+.
+selected
+{
+outline
+:
+2px
+solid
+var
+(
+-
+-
+in
+-
+content
+-
+accent
+-
+color
+)
+;
+}
+}
+media
+not
+(
+prefers
+-
+contrast
+)
+{
+.
+content
+-
+blocking
+-
+category
+{
+background
+-
+color
+:
+rgba
+(
+215
+215
+219
+0
+.
+1
+)
+;
+}
+.
+content
+-
+blocking
+-
+category
+.
+selected
+{
 background
 -
 color
@@ -1448,6 +1509,7 @@ background
 color
 )
 ;
+}
 }
 .
 content
