Bug 1727129 - Fix the searchbar focus outline to be even on all sides, on all DPI modes r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D123358

UltraBlame original commit: d9c6843a89d9ead189b866025ecf2e2f41918da3

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -573,6 +573,12 @@ true
 urlbar
 -
 background
+#
+searchbar
+:
+focus
+-
+within
 {
 box
 -
@@ -646,26 +652,13 @@ searchbar
 s
 border
 as
-a
-combination
-of
-its
-1px
-unfocused
-border
-and
-a
-1px
-inset
-box
--
-shadow
+an
+outline
 .
 If
 we
 did
 it
-all
 as
 a
 border
@@ -750,26 +743,28 @@ focus
 -
 within
 {
-box
--
-shadow
+outline
 :
-0
-1px
-3px
-rgba
+var
 (
-0
-0
-0
-0
-.
-23
+-
+-
+focus
+-
+outline
 )
-0
-0
-0
-1px
+;
+outline
+-
+offset
+:
+-
+2px
+;
+outline
+-
+color
+:
 var
 (
 -
@@ -784,26 +779,12 @@ border
 -
 color
 )
-inset
 ;
 border
 -
 color
 :
-var
-(
--
--
-toolbar
--
-field
--
-focus
--
-border
--
-color
-)
+transparent
 ;
 }
 #
