Bug 1727129 - Also fix the focus outline for the organizer's searchbar on Windows using the same technique r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D123360

UltraBlame original commit: 61a99ddb0062461edb91c97063ac17bf0dea1823

--- a/browser/themes/windows/places/organizer.css
+++ b/browser/themes/windows/places/organizer.css
@@ -243,7 +243,16 @@ border
 -
 color
 :
-transparent
+var
+(
+-
+-
+organizer
+-
+outline
+-
+color
+)
 ;
 -
 -
@@ -584,27 +593,6 @@ rgba
 .
 23
 )
-0
-0
-0
-1px
-var
-(
--
--
-organizer
--
-toolbar
--
-field
--
-focus
--
-border
--
-color
-)
-inset
 ;
 -
 -
@@ -843,36 +831,6 @@ rgba
 )
 ;
 }
-}
-}
-media
-(
-prefers
--
-contrast
-)
-{
-#
-searchFilter
-[
-focused
-]
-{
-outline
-:
-2px
-solid
-var
-(
--
--
-organizer
--
-outline
--
-color
-)
-;
 }
 }
 /
@@ -1663,6 +1621,12 @@ border
 -
 color
 :
+transparent
+;
+outline
+:
+2px
+solid
 var
 (
 -
@@ -1679,6 +1643,13 @@ border
 -
 color
 )
+;
+outline
+-
+offset
+:
+-
+2px
 ;
 }
 /
