Bug 1727193 - Set accent color on all elements in common.inc.css r=desktop-theme-reviewers,dao
For now this applies in practice only for `input[type="range"]`, but in the future it can serve for other purposes.

Differential Revision: https://phabricator.services.mozilla.com/D123400

UltraBlame original commit: cca60be855b9deb99d944c9576dc8a2fd4e3a5e1

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -3238,6 +3238,50 @@ Field
 ;
 }
 }
+media
+not
+(
+prefers
+-
+contrast
+)
+{
+*
+{
+/
+*
+accent
+-
+color
+is
+a
+property
+that
+gets
+ignored
+in
+HCM
+*
+/
+accent
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+accent
+-
+color
+)
+;
+}
+}
 :
 root
 {
