Bug 1705685 - Fix the font-size and subhead spacing in download item details panel. r=dao,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D123689

UltraBlame original commit: 8558b539ad937c42e21031ecdf0b833784ba18c8

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -409,6 +409,14 @@ display
 :
 flex
 ;
+margin
+-
+top
+:
+1
+.
+5em
+;
 }
 .
 downloadBlockedBadge
@@ -1858,7 +1866,7 @@ calc
 (
 100
 %
-/
+*
 var
 (
 -
@@ -1926,7 +1934,9 @@ margin
 -
 bottom
 :
-1em
+0
+.
+5em
 ;
 opacity
 :
